# lionclaw

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/: dependabot.yml
containers/: README.md
crates/lionclaw/: Cargo.toml
crates/lionclaw-channel-email/: Cargo.toml
crates/lionclaw-channel-email/src/: api.rs  auth.rs  classifier.rs  config.rs  diagnostics.rs  mailbox.rs  main.rs  mime.rs  oauth2.rs  protocol.rs  store.rs  worker.rs
crates/lionclaw-channel-team-local/: Cargo.toml
crates/lionclaw-channel-team-local/src/: api.rs  config.rs  discovery.rs  inventory.rs  main.rs  protocol.rs  send.rs  worker.rs
crates/lionclaw-durable-fs/: Cargo.toml
crates/lionclaw-durable-fs/src/: lib.rs
crates/lionclaw-private-context/: Cargo.toml
crates/lionclaw-private-context/src/: cli.rs  context.rs  main.rs  projector.rs  protocol.rs  recorder.rs  store.rs  validation.rs
crates/lionclaw-private-context/tests/: cli.rs
crates/lionclaw-runtime-acp/: Cargo.toml
crates/lionclaw-runtime-acp/src/: adapter.rs  client.rs  driver.rs  event_mapping.rs  lib.rs  policy.rs  program.rs  protocol.rs  state.rs  tests.rs
crates/lionclaw-runtime-acp/tests/fixtures/: opencode_acp_config_options_1_17_9.json  opencode_acp_success_1_17_9.json
crates/lionclaw-runtime-api/: Cargo.toml
crates/lionclaw-runtime-api/src/: adapter.rs  auth.rs  capability.rs  context.rs  driver.rs  event.rs  lib.rs  program.rs  program_backed.rs  registry.rs  state.rs  tests.rs
crates/lionclaw-runtime-codex/: Cargo.toml
crates/lionclaw-runtime-codex/src/: adapter.rs  control.rs  driver.rs  host_auth.rs  lib.rs  program.rs  state.rs  tests.rs
crates/lionclaw-runtime-codex/src/app_server/: client.rs  event_mapping.rs  generated_artifacts.rs  mod.rs  protocol.rs  sink.rs  transport.rs
crates/lionclaw-runtime-codex/tests/fixtures/codex_app_server/: compact_context_compaction_v2.json  successful_turn_v2.json  turn_interrupt_v2.json
crates/lionclaw-runtime-mock/: Cargo.toml
crates/lionclaw-runtime-mock/src/: lib.rs
crates/lionclaw-runtime-opencode/: Cargo.toml
crates/lionclaw-runtime-opencode/src/: lib.rs
crates/lionclaw/src/: applied.rs  config.rs  contracts.rs  daemon.rs  durable_fs.rs  home.rs  lib.rs  main.rs  project_inventory.rs  runtime_timeouts.rs  workspace.rs
crates/lionclaw/src/api/: mod.rs
crates/lionclaw/src/kernel/: capability_broker.rs  channel_attachments.rs  channel_state.rs  continuity.rs  continuity_fs.rs  core.rs  db.rs  error.rs  input_routing.rs  jobs.rs  memory_projection.rs  memory_projector_service.rs  mod.rs  policy.rs  private_context_command.rs  private_context_projection.rs  private_context_projector_service.rs  private_context_recorder_service.rs  private_context_recording.rs  private_context_test_support.rs  prompt_context.rs  runtime_policy.rs  scheduler.rs  session_compactions.rs  session_transcript.rs  session_turns.rs  sessions.rs  skills.rs
crates/lionclaw/src/kernel/runtime/: codex_host_auth.rs  mod.rs  skill_projection.rs
crates/lionclaw/src/kernel/runtime/adapters/: codex.rs  mod.rs  opencode.rs  state_file.rs
crates/lionclaw/src/kernel/runtime/execution/: backend.rs  mod.rs  mount_validation.rs  oci.rs  plan.rs  planner.rs  process.rs  runtime_auth.rs
crates/lionclaw/src/operator/: attach.rs  bundled_channels.rs  channel_env.rs  channel_metadata.rs  cli.rs  config.rs  connect.rs  doctor.rs  managed_units.rs  mod.rs  operations.rs  private_paths.rs  reconcile.rs  run.rs  run_runtime_tui.rs  runtime.rs  runtime_integration.rs  runtime_mounts.rs  skill_metadata.rs  snapshot.rs  status.rs  target.rs  team_local.rs
crates/lionclaw/src/operator/run_tui/: backend.rs  input.rs  mod.rs  render.rs  tests.rs
crates/lionclaw/tests/: kernel_capability_broker.rs  kernel_channels.rs  kernel_continuity.rs  kernel_p2_capability_protocol.rs  kernel_runtime_channel_send.rs  kernel_runtime_policy.rs  kernel_runtime_timeout.rs  kernel_scheduler.rs  kernel_session_history.rs
crates/lionclaw/tests/common/: mod.rs
crates/lionclaw/tests/fixtures/: private-context-command-runner
crates/lionclaw/tests/fixtures/codex_app_server/: compact_context_compaction_v2.json
docs/: ARCHITECTURE.md  BINARY_RUNTIME_AGNOSTIC_MODEL.md  CONTINUITY_MODEL.md  MANUAL_QA.md  MEDIATED_WORK_DECISIONS.md  RELEASE.md  ROADMAP.md  RUNTIME_MODEL.md  V0_PLAN.md
migrations/: 202602270001_init.sql  202602270002_channels.sql  202603160001_skill_snapshots.sql  202603160002_channel_stream.sql  202603180001_channel_turns.sql  202603200001_session_turn_history.sql  202603200002_session_turn_interrupted.sql  202603230001_channel_turn_resume_checkpoint.sql  202603230002_session_last_activity.sql  202603310001_scheduler.sql  202604030001_session_compactions.sql  202604070001_continuity_refresh_indexes.sql  202604130001_session_project_scope.sql  202604220001_skill_alias.sql  202604220002_unique_skill_alias.sql  202605140001_channels_v2_core.sql  202605140001_runtime_control_turn_kind.sql  202605140002_channels_v2_core.sql  202605140003_channel_attachments.sql  202605140004_session_attachment_sources.sql  202605140005_channel_outbox.sql  202605140006_channel_health_reports.sql  202605180001_stream_message_boundary.sql  202605190001_channel_turn_terminal_statuses.sql  202605210001_channel_outbox_source_fingerprint.sql  202605230001_channel_group_conversation_grants.sql  202605230001_stream_file_change.sql  202605230002_channel_command_trigger.sql  202606290001_session_turn_journal.sql
scripts/: README.md  attach-terminal-test.sh  bootstrap-terminal-test.sh  ci.sh  install-channel-skill.sh  lionclaw-project.sh
site/: README.md  index.html  styles.css  zola.toml
skills/channel-telegram/: README.md  SKILL.md  lionclaw.toml  pyproject.toml
skills/channel-telegram/lionclaw_channel_telegram/: __init__.py  __main__.py  api.py  config.py  telegram.py  webhook.py  worker.py
skills/channel-telegram/scripts/: worker  worker.sh
skills/channel-telegram/tests/: test_worker.py
src/: applied.rs  config.rs  contracts.rs  daemon.rs  home.rs  lib.rs  main.rs  project_inventory.rs  (+2 more)
(+152 files in other folders)
