[package]
name = "lionclaw"
version = "0.3.0"
edition = "2021"
license = "MIT"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }

# Production hazards: these should not land in the secure core by accident.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"

# Async/concurrency hazards that should apply to production and tests.
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

# Resource and process hygiene that should apply to production and tests.
exit = "warn"
mem_forget = "deny"

# CI-stable default Clippy lints that should be visible in the project profile.
cloned_ref_to_slice_refs = "warn"
confusing_method_to_numeric_cast = "warn"
disallowed_fields = "warn"
doc_suspicious_footnotes = "warn"
infallible_try_from = "warn"
manual_checked_ops = "warn"
manual_is_multiple_of = "warn"
manual_take = "warn"
possible_missing_else = "warn"
redundant_iter_cloned = "warn"
replace_box = "warn"
unnecessary_sort_by = "deny"
unnecessary_option_map_or_else = "warn"
useless_concat = "warn"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
base64 = "0.22"
chrono-tz = "0.10"
cron = "0.12"
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
rustix = { version = "1.1", features = ["fs", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"
tempfile = "3.12"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "process"] }
toml = "1.1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4", "v5"] }
which = "7.0"
