[workspace]
members = [
    "crates/lionclaw",
    "crates/lionclaw-channel-email",
    "crates/lionclaw-channel-team-local",
    "crates/lionclaw-private-context",
    "crates/lionclaw-durable-fs",
    "crates/lionclaw-runtime-api",
    "crates/lionclaw-runtime-codex",
    "crates/lionclaw-runtime-mock",
    "crates/lionclaw-runtime-opencode",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
lionclaw-durable-fs = { path = "crates/lionclaw-durable-fs" }
lionclaw-runtime-api = { path = "crates/lionclaw-runtime-api" }
lionclaw-runtime-codex = { path = "crates/lionclaw-runtime-codex" }
lionclaw-runtime-mock = { path = "crates/lionclaw-runtime-mock" }
lionclaw-runtime-opencode = { path = "crates/lionclaw-runtime-opencode" }
reqwest = { version = "0.12", default-features = false }
rustix = "1.1"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.11"
sqlx = "0.8"
tempfile = "3.27"
tokio = "1.50"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.23"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Production hazards: these should not land in trusted LionClaw code by accident.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"

# Async/concurrency hazards that should apply to production and tests.
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"

# Resource and process hygiene that should apply to production and tests.
exit = "warn"
mem_forget = "deny"

# CI-stable default Clippy lints that should be visible in the project profile.
cloned_ref_to_slice_refs = "warn"
confusing_method_to_numeric_cast = "warn"
disallowed_fields = "warn"
doc_suspicious_footnotes = "warn"
infallible_try_from = "warn"
manual_checked_ops = "warn"
manual_is_multiple_of = "warn"
manual_take = "warn"
possible_missing_else = "warn"
redundant_iter_cloned = "warn"
replace_box = "warn"
unnecessary_sort_by = "deny"
unnecessary_option_map_or_else = "warn"
useless_concat = "warn"
