[package]
name = "lionclaw-channel-email"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
hex.workspace = true
imap-client = "0.3"
mail-parser = "0.11"
mail-send = "0.6"
reqwest = { workspace = true, features = ["json", "multipart", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "fs", "net"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
