[package]
name = "lionclaw-channel-email"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
clap.workspace = true
hex.workspace = true
imap-client = "0.3"
lionclaw-durable-fs.workspace = true
mail-parser = "0.11"
mail-send = { version = "0.6", default-features = false, features = [
  "builder",
  "cram-md5",
  "digest-md5",
  "ring",
  "tls12",
] }
reqwest = { workspace = true, features = ["json", "multipart", "rustls-tls"] }
rustix.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
shlex = "2.0"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "fs", "net", "io-util", "process"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
