[package]
name = "lionclaw-channel-team-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
reqwest = { workspace = true, features = ["json", "multipart", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "time", "net"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
