[package]
name = "lionclaw-durable-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rustix = { workspace = true, features = ["fs"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
