[package]
name = "lionclaw-private-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "io-std", "fs"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile.workspace = true
