[package]
name = "lionclaw-runtime-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
lionclaw-runtime-api.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
