[package]
name = "lionclaw-runtime-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rustix = { workspace = true, features = ["fs"] }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
