[package]
name = "lionclaw-runtime-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde", "clock"] }
lionclaw-durable-fs.workspace = true
lionclaw-runtime-api.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rustix = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "rt"] }
