[package]
name = "lionclaw-runtime-mock"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
lionclaw-runtime-api.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
