[package]
name = "lionclaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
base64 = "0.22"
chrono-tz = "0.10"
cron = "0.16"
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
hex = "0.4"
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
rustix = { version = "1.1", features = ["fs", "process", "termios"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
tempfile = "3.27"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "process", "io-util"] }
toml = "1.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-markdown = { version = "0.3.7", default-features = false }
uuid = { version = "1.23", features = ["serde", "v4", "v5"] }
which = "8.0"
