[package]
name = "lionclaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum = { workspace = true, features = ["macros", "json", "multipart"] }
base64 = "0.22"
chrono-tz = "0.10"
cron = "0.16"
http-body-util = "0.1"
chrono = { workspace = true, features = ["serde", "clock"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
hex = "0.4"
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
rustix = { version = "1.1", features = ["fs", "process", "termios"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
thiserror = "2.0"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "fs", "process", "io-util"] }
toml.workspace = true
tower-http = { version = "0.6", features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-markdown = { version = "0.3.7", default-features = false }
uuid = { version = "1.23", features = ["serde", "v4", "v5"] }
which = "8.0"
