[package]
name = "lionclaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros", "json", "multipart"] }
base64.workspace = true
chrono-tz = "0.10"
cron = "0.17"
http-body-util = "0.1"
chrono = { workspace = true, features = ["serde", "clock"] }
clap.workspace = true
crossterm = "0.29"
hex.workspace = true
hyper = { version = "1.10", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
lionclaw-durable-fs.workspace = true
lionclaw-runtime-api.workspace = true
lionclaw-runtime-acp.workspace = true
lionclaw-runtime-codex.workspace = true
lionclaw-runtime-mock.workspace = true
nix = { version = "0.31", default-features = false, features = ["signal"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
rustix = { workspace = true, features = ["fs", "process", "termios"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
thiserror = "2.0"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "fs", "process", "io-util"] }
toml.workspace = true
tower-http = { version = "0.7", features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tui-markdown = { version = "0.3.7", default-features = false }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = "8.0"
