[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lionclaw-channel-telegram"
version = "0.1.0"
description = "Telegram channel skill for LionClaw"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.15.0",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "ruff>=0.11.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "SIM", "UP"]
